--- a/Exercises/Exercise-17-Fundamental-Algorithms.ipynb
+++ b/Exercises/Exercise-17-Fundamental-Algorithms.ipynb
@@ -33,7 +33,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR_CODE_HERE"
+    "def linearSearch1(L, t):\n",
+    "    for i in range(len(L)):\n",
+    "        if L[i] == t:\n",
+    "            return i\n",
+    "    return -1"
    ]
   },
   {
@@ -52,11 +56,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#YOUR_CODE_HERE"
+    "def binarySearch1(L, t):\n",
+    "    low = 0\n",
+    "    upp = len(L) - 1\n",
+    "    mid = upp // 2\n",
+    "    while True:\n",
+    "        if L[mid] == t:\n",
+    "            return mid\n",
+    "        elif low == upp:\n",
+    "            return -1\n",
+    "        elif t > L[mid]:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            upp = mid - 1\n",
+    "        mid = low + ((upp - low) // 2)"
    ]
   },
   {
@@ -75,11 +103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR_CODE_HERE"
+    "def binarySearch2(L, t):\n",
+    "    L = L[::-1]\n",
+    "    if binarySearch1(L, t) == -1:\n",
+    "        return -1\n",
+    "    return len(L) - binarySearch1(L, t) - 1\n",
+    "\n",
+    "print(binarySearch2([9, 8, 7, 6, 5, 4, 3, 2, 1], 9))"
    ]
   },
   {
@@ -100,11 +142,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR_CODE_HERE"
+    "def linearSearch2(L, t):\n",
+    "    t_prime = None\n",
+    "    for i in range(len(L)):\n",
+    "        if L[i] > t and t_prime == None:\n",
+    "            t_prime = i\n",
+    "        elif L[i] > t and L[i] < L[t_prime]:\n",
+    "            t_prime = i\n",
+    "    if t_prime == None:\n",
+    "        return -1\n",
+    "    return t_prime"
    ]
   },
   {
@@ -125,11 +184,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR_CODE_HERE"
+    "def linearSearch3(L, t):\n",
+    "    t_prime = None\n",
+    "    for i in range(len(L)):\n",
+    "        if L[i] < t and t_prime == None:\n",
+    "            t_prime = i\n",
+    "        elif L[i] < t and L[i] > L[t_prime]:\n",
+    "            t_prime = i\n",
+    "    if t_prime == None:\n",
+    "        return -1\n",
+    "    return t_prime"
    ]
   },
   {
@@ -178,11 +254,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DSVNSNBXKXPG\n",
+      "DQSGKAKWKZZT\n",
+      "LGWTLWRUVGYU\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR_CODE_HERE"
+    "import csv\n",
+    "\n",
+    "def overallScoreCalc(a, b, c, d):\n",
+    "    return int(int(a)/50 * 10 + int(b)/50 * 15 + int(c)/100 * 25 + int(d)/100 * 50)\n",
+    "\n",
+    "with open(\"./resources/DATA.TXT\", \"r\") as f:\n",
+    "    bigBoyList = []\n",
+    "    reader = csv.reader(f)\n",
+    "    for row in reader:\n",
+    "        bigBoyList.append(row)\n",
+    "\n",
+    "while True:\n",
+    "    inp = input(\"Do you wish to perform a search? (Y/n): \")\n",
+    "    if inp != \"Y\" and inp != \"y\":\n",
+    "        break\n",
+    "    cat = input(\"Please input a search category (overall/1/2/3/4): \")\n",
+    "    search = input(\"Please input a search parameter: \")\n",
+    "       \n",
+    "    if cat in [\"1\", \"2\", \"3\", \"4\"]:\n",
+    "        for i in bigBoyList:\n",
+    "            if search == i[int(cat)]:\n",
+    "                print(i[0])\n",
+    "    else:\n",
+    "        for i in bigBoyList:\n",
+    "            if int(search) == overallScoreCalc(i[1], i[2], i[3], i[4]):\n",
+    "                print(i[0])\n",
+    "        "
    ]
   },
   {
@@ -200,7 +312,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR_CODE_HERE"
+    "# error case\n",
+    "[1, 2.3, 41, 23, 4, \"bob\"]\n",
+    "\n",
+    "# boundary case\n",
+    "[]\n",
+    "\n",
+    "# normal case\n",
+    "[1, 2, 3, 6, 4, 5]"
    ]
   },
   {
@@ -221,11 +340,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum Value: 0.05751142288803915\n",
+      "First Quartile Value: 0.297431794278875\n",
+      "Median Value: 0.5135899417111798\n",
+      "Third Quartile Value: 0.7444209235740514\n",
+      "Maximum Value: 0.9253272842022315\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR_CODE_HERE"
+    "L = [0.5332524118317122, 0.8376832262101128, 0.9253272842022315, 0.05751142288803915, 0.297431794278875, 0.7444209235740514, 0.12074728159474817, 0.33942042899820207, 0.6525428199344485, 0.4939274715906473]\n",
+    "\n",
+    "def quicksort(arr):\n",
+    "    # Base case: if the list is one or zero elements, it's already sorted.\n",
+    "    if len(arr) <= 1:\n",
+    "        return arr\n",
+    "\n",
+    "    # Choose a pivot. For simplicity, we're choosing the last element.\n",
+    "    pivot = arr[-1]\n",
+    "\n",
+    "    # Partition the array into three lists:\n",
+    "    # less_than_pivot, equals_pivot, and greater_than_pivot.\n",
+    "    less_than_pivot = [x for x in arr[:-1] if x < pivot]\n",
+    "    equals_pivot = [x for x in arr if x == pivot]\n",
+    "    greater_than_pivot = [x for x in arr[:-1] if x > pivot]\n",
+    "\n",
+    "    # Recursively apply quicksort to the less_than_pivot and greater_than_pivot lists.\n",
+    "    return quicksort(less_than_pivot) + equals_pivot + quicksort(greater_than_pivot)\n",
+    "\n",
+    "\n",
+    "def find_median(sorted_list):\n",
+    "    n = len(sorted_list)\n",
+    "    if n % 2 == 0:\n",
+    "        return (sorted_list[n // 2 - 1] + sorted_list[n // 2]) / 2\n",
+    "    else:\n",
+    "        return sorted_list[n // 2]\n",
+    "\n",
+    "def find_quartiles(L):\n",
+    "    \n",
+    "    L = quicksort(L)\n",
+    "\n",
+    "    \n",
+    "    # Minimum value\n",
+    "    min_val = L[0]\n",
+    "    \n",
+    "    # Median value\n",
+    "    median = find_median(L)\n",
+    "    \n",
+    "    # Maximum value\n",
+    "    max_val = L[-1]\n",
+    "    \n",
+    "    # Split the list into two halves\n",
+    "    if len(L) % 2 == 0:\n",
+    "        first_half = L[:len(L) // 2]\n",
+    "        second_half = L[len(L) // 2:]\n",
+    "    else:\n",
+    "        first_half = L[:len(L) // 2]\n",
+    "        second_half = L[len(L) // 2 + 1:]\n",
+    "    \n",
+    "    # First quartile (Q1) is the median of the first half\n",
+    "    q1 = find_median(first_half)\n",
+    "    \n",
+    "    # Third quartile (Q3) is the median of the second half\n",
+    "    q3 = find_median(second_half)\n",
+    "    \n",
+    "    return min_val, q1, median, q3, max_val\n",
+    "\n",
+    "min_val, q1, median, q3, max_val = find_quartiles(L)\n",
+    "print(f\"Minimum Value: {min_val}\")\n",
+    "print(f\"First Quartile Value: {q1}\")\n",
+    "print(f\"Median Value: {median}\")\n",
+    "print(f\"Third Quartile Value: {q3}\")\n",
+    "print(f\"Maximum Value: {max_val}\")"
    ]
   },
   {
@@ -284,11 +477,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    1. Read file data\n",
+      "    2. Bubble sort\n",
+      "    3. Insertion sort\n",
+      "    4. End\n",
+      "    \n",
+      "[128, 341, 364, 233, 178, 190, 192, 80, 0, 0, 334, 231, 287, 165, 369, 339, 401, 113, 167, 190, 183, 173, 203, 203, 143, 138, 381, 364, 133, 78, 196, 192, 280, 103, 190, 224, 131, 185, 175, 369, 339, 301, 219, 273, 180, 143, 274, 199, 220, 256]\n",
+      "\n",
+      "    1. Read file data\n",
+      "    2. Bubble sort\n",
+      "    3. Insertion sort\n",
+      "    4. End\n",
+      "    \n",
+      "[128, 341, 364, 233, 178, 190, 192, 80, 0, 0, 334, 231, 287, 165, 369, 339, 401, 113, 167, 190, 183, 173, 203, 203, 143, 138, 381, 364, 133, 78, 196, 192, 280, 103, 190, 224, 131, 185, 175, 369, 339, 301, 219, 273, 180, 143, 274, 199, 220, 256]\n",
+      "[0, 0, 78, 80, 103, 113, 128, 131, 133, 138, 143, 143, 165, 167, 173, 175, 178, 180, 183, 185, 190, 190, 190, 192, 192, 196, 199, 203, 203, 219, 220, 224, 231, 233, 256, 273, 274, 280, 287, 301, 334, 339, 339, 341, 364, 364, 369, 369, 381, 401]\n",
+      "\n",
+      "    1. Read file data\n",
+      "    2. Bubble sort\n",
+      "    3. Insertion sort\n",
+      "    4. End\n",
+      "    \n",
+      "[128, 341, 364, 233, 178, 190, 192, 80, 0, 0, 334, 231, 287, 165, 369, 339, 401, 113, 167, 190, 183, 173, 203, 203, 143, 138, 381, 364, 133, 78, 196, 192, 280, 103, 190, 224, 131, 185, 175, 369, 339, 301, 219, 273, 180, 143, 274, 199, 220, 256]\n",
+      "[0, 0, 78, 80, 103, 113, 128, 131, 133, 138, 143, 143, 165, 167, 173, 175, 178, 180, 183, 185, 190, 190, 190, 192, 192, 196, 199, 203, 203, 219, 220, 224, 231, 233, 273, 274, 280, 287, 301, 334, 339, 339, 341, 364, 364, 369, 369, 381, 401, 256]\n",
+      "\n",
+      "    1. Read file data\n",
+      "    2. Bubble sort\n",
+      "    3. Insertion sort\n",
+      "    4. End\n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR_CODE_HERE"
+    "data = []\n",
+    "\n",
+    "while True:\n",
+    "    # task 1\n",
+    "\n",
+    "    print(\"\"\"\n",
+    "    1. Read file data\n",
+    "    2. Bubble sort\n",
+    "    3. Insertion sort\n",
+    "    4. End\n",
+    "    \"\"\")\n",
+    "    menuInput = input(\"Choose your option: \")\n",
+    "\n",
+    "    if not menuInput in [\"1\", \"2\", \"3\"]:\n",
+    "        break\n",
+    "    \n",
+    "    # task 2\n",
+    "    if menuInput == \"1\":\n",
+    "        with open(\"./resources/ADMISSIONS-DATA.txt\", \"r\") as f:\n",
+    "            data = f.readlines()\n",
+    "            data = [int(i.strip()) for i in data]\n",
+    "            unsortedData = data\n",
+    "        print(data)\n",
+    "        \n",
+    "    if menuInput == \"2\":\n",
+    "        B = data.copy()\n",
+    "        NoSwaps = False\n",
+    "        while NoSwaps == False:\n",
+    "            NoSwaps = True\n",
+    "            for posn in range(0, len(B) - 1):\n",
+    "                if B[posn] > B[posn + 1]:\n",
+    "                    B[posn], B[posn + 1] = B[posn + 1], B[posn]\n",
+    "                    NoSwaps = False            \n",
+    "        print(data)\n",
+    "        print(B)\n",
+    "        \n",
+    "    if menuInput == \"3\":\n",
+    "        A = data.copy()\n",
+    "        j = 0\n",
+    "        for i in range(1, len(A) - 1):\n",
+    "            j = i\n",
+    "            while j > 0 and A[j] < A[j-1]:\n",
+    "                A[j], A[j-1] = A[j-1], A[j]\n",
+    "                j -= 1\n",
+    "        print(data)\n",
+    "        print(A)"
    ]
   },
   {
@@ -311,11 +585,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    1. Read file data\n",
+      "    2. Bubble sort\n",
+      "    3. Insertion sort\n",
+      "    4. End\n",
+      "    \n",
+      "[128, 341, 364, 233, 178, 190, 192, 80, 0, 0, 334, 231, 287, 165, 369, 339, 401, 113, 167, 190, 183, 173, 203, 203, 143, 138, 381, 364, 133, 78, 196, 192, 280, 103, 190, 224, 131, 185, 175, 369, 339, 301, 219, 273, 180, 143, 274, 199, 220, 256]\n",
+      "size of data: 50\n",
+      "\n",
+      "    1. Read file data\n",
+      "    2. Bubble sort\n",
+      "    3. Insertion sort\n",
+      "    4. End\n",
+      "    \n",
+      "[128, 341, 364, 233, 178, 190, 192, 80, 0, 0, 334, 231, 287, 165, 369, 339, 401, 113, 167, 190, 183, 173, 203, 203, 143, 138, 381, 364, 133, 78, 196, 192, 280, 103, 190, 224, 131, 185, 175, 369, 339, 301, 219, 273, 180, 143, 274, 199, 220, 256]\n",
+      "[0, 0, 78, 80, 103, 113, 128, 131, 133, 138, 143, 143, 165, 167, 173, 175, 178, 180, 183, 185, 190, 190, 190, 192, 192, 196, 199, 203, 203, 219, 220, 224, 231, 233, 256, 273, 274, 280, 287, 301, 334, 339, 339, 341, 364, 364, 369, 369, 381, 401]\n",
+      "number of comparisons: 1715\n",
+      "\n",
+      "    1. Read file data\n",
+      "    2. Bubble sort\n",
+      "    3. Insertion sort\n",
+      "    4. End\n",
+      "    \n",
+      "[128, 341, 364, 233, 178, 190, 192, 80, 0, 0, 334, 231, 287, 165, 369, 339, 401, 113, 167, 190, 183, 173, 203, 203, 143, 138, 381, 364, 133, 78, 196, 192, 280, 103, 190, 224, 131, 185, 175, 369, 339, 301, 219, 273, 180, 143, 274, 199, 220, 256]\n",
+      "[0, 0, 78, 80, 103, 113, 128, 131, 133, 138, 143, 143, 165, 167, 173, 175, 178, 180, 183, 185, 190, 190, 190, 192, 192, 196, 199, 203, 203, 219, 220, 224, 231, 233, 256, 273, 274, 280, 287, 301, 334, 339, 339, 341, 364, 364, 369, 369, 381, 401]\n",
+      "number of comparisons: 573\n",
+      "\n",
+      "    1. Read file data\n",
+      "    2. Bubble sort\n",
+      "    3. Insertion sort\n",
+      "    4. End\n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR_CODE_HERE"
+    "data = []\n",
+    "\n",
+    "while True:\n",
+    "    # task 1\n",
+    "\n",
+    "    print(\"\"\"\n",
+    "    1. Read file data\n",
+    "    2. Bubble sort\n",
+    "    3. Insertion sort\n",
+    "    4. End\n",
+    "    \"\"\")\n",
+    "    menuInput = input(\"Choose your option: \")\n",
+    "\n",
+    "    if not menuInput in [\"1\", \"2\", \"3\"]:\n",
+    "        break\n",
+    "    \n",
+    "    # task 2\n",
+    "    if menuInput == \"1\":\n",
+    "        with open(\"./resources/ADMISSIONS-DATA.txt\", \"r\") as f:\n",
+    "            data = f.readlines()\n",
+    "            data = [int(i.strip()) for i in data]\n",
+    "            unsortedData = data\n",
+    "        print(data)\n",
+    "        print(f\"size of data: {len(data)}\")\n",
+    "        \n",
+    "    if menuInput == \"2\":\n",
+    "        comparisons = 0\n",
+    "        B = data.copy()\n",
+    "        NoSwaps = False\n",
+    "        while NoSwaps == False:\n",
+    "            NoSwaps = True\n",
+    "            for posn in range(0, len(B) - 1):\n",
+    "                comparisons += 1\n",
+    "                if B[posn] > B[posn + 1]:\n",
+    "                    B[posn], B[posn + 1] = B[posn + 1], B[posn]\n",
+    "                    NoSwaps = False            \n",
+    "        print(data)\n",
+    "        print(B)\n",
+    "        print(f\"number of comparisons: {comparisons}\")\n",
+    "        \n",
+    "    if menuInput == \"3\":\n",
+    "        comparisons = 0\n",
+    "        A = data.copy()\n",
+    "        j = 0\n",
+    "        for i in range(1, len(A)):\n",
+    "            j = i\n",
+    "            while j > 0 and A[j] < A[j-1]:\n",
+    "                comparisons += 1\n",
+    "                A[j], A[j-1] = A[j-1], A[j]\n",
+    "                j -= 1\n",
+    "        print(data)\n",
+    "        print(A)\n",
+    "        print(f\"number of comparisons: {comparisons}\")"
    ]
   },
   {
@@ -433,8 +798,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   },
   "orig_nbformat": 2,
   "vscode": {
