--- a/Notes/Chapter_10_SQL-Databases.ipynb
+++ b/Notes/Chapter_10_SQL-Databases.ipynb
@@ -41,15 +41,15 @@
     "When referred as a medium of storing data, a **flat file** is usually a plain text file or spreadsheet document, where records usually follow a uniform format, but there are no structures for indexing or recognizing relationships between records. E.g, consider a text file with the following content\n",
     "\n",
     ">```\n",
-    "Name, Gender, Age\n",
-    "Alex, M, 25\n",
-    "Ben, M, 29\n",
-    "Cindy, F, eighteen\n",
-    "Damian, M, 22\n",
-    "Erica, F, 23\n",
-    "Fanny, F, don't know\n",
-    "Gopal, M, 29\n",
-    "Damian, M, 22\n",
+    ">Name, Gender, Age\n",
+    ">Alex, M, 25\n",
+    ">Ben, M, 29\n",
+    ">Cindy, F, eighteen\n",
+    ">Damian, M, 22\n",
+    ">Erica, F, 23\n",
+    ">Fanny, F, don't know\n",
+    ">Gopal, M, 29\n",
+    ">Damian, M, 22\n",
     ">```\n",
     "\n",
     "Such approach of storing data using flat files have the following limitations:\n",
