--- a/Notes/Chapter_11_Fundamental_Algorithms.ipynb
+++ b/Notes/Chapter_11_Fundamental_Algorithms.ipynb
@@ -196,6 +196,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "def binarySearch(a, t):\n",
+    "    start = 0\n",
+    "    end = len(a) - 1\n",
+    "    while start <= end:\n",
+    "        mid = (start + end) // 2\n",
+    "        if t == a[mid]:\n",
+    "            return mid\n",
+    "        if t < a[mid]:\n",
+    "            end = mid - 1\n",
+    "        else:\n",
+    "            start = mid + 1\n",
+    "    return -1\n",
+    "\n",
+    "print(binarySearch([3,4,5,7,8,9,10,12,15,19,20,21,22,24,25], 22))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -220,6 +250,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binaryrec(array, value):"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -236,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -274,11 +313,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'array' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mbinary_search_rec\u001b[39m(array, val, low\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, high\u001b[39m=\u001b[39m\u001b[39mlen\u001b[39m(array)):\n\u001b[1;32m      2\u001b[0m     \u001b[39mif\u001b[39;00m high \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m low:\n\u001b[1;32m      3\u001b[0m         mid \u001b[39m=\u001b[39m (low\u001b[39m+\u001b[39mhigh)\u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'array' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "def binary_search_rec(array, low, high,val):\n",
+    "def binary_search_rec(array, val, low, high):\n",
     "    if high >= low:\n",
     "        mid = (low+high)//2\n",
     "        if array[mid]==val:\n",
@@ -289,6 +340,52 @@
     "            return binary_search_rec(array,low,mid-1,val)\n",
     "    else:\n",
     "        return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.59 µs ± 2.52 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "array = [39, 96, 51, 20, 42, 42, 74, 28, 66, 16, 10, 86, 6, 43, 67, 98, 32, 73, 99, 7, 80, 88, 57, 83, 1, 64, 33, 38, 38, 8, 68, 38, 42, 80, 71, 82, 25, 29, 2, 85, 2, 96, 34, 14, 9, 65, 50, 63, 99, 94, 5, 93, 84, 46, 64, 22, 59, 31, 74, 13, 93, 13, 98, 93]\n",
+    "binary_search_rec(sorted(array), 98, 0, len(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = list(sorted(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80.9 ns ± 0.196 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "binary_search_rec(array, 98, 0, len(array))"
    ]
   },
   {
@@ -452,6 +549,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5, 6, 7, 8, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def insertionSort(A):\n",
+    "    j = 0\n",
+    "    for i in range(1, len(A) - 1):\n",
+    "        j = i\n",
+    "        while j > 0 and A[j] < A[j-1]:\n",
+    "            A[j], A[j-1] = A[j-1], A[j]\n",
+    "            j -= 1\n",
+    "    return A\n",
+    "\n",
+    "print(insertionSort([6,5,3,1,8,7,2,4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def insertion(l):\n",
+    "    for i in range(1, len(l)):\n",
+    "        compare = i\n",
+    "        while compare > 0 and l[compare - 1] > l[compare]:\n",
+    "            l[compare], l[compare - 1] = l[compare - 1], l[compare]\n",
+    "            compare -= 1\n",
+    "    return l\n",
+    "\n",
+    "print(insertion([6,5,3,1,8,7,2,4]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -466,120 +614,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6, 5, 3, 1, 8, 7, 2, 4]\n",
-      "key is at position 1\n",
-      "[6, 6, 3, 1, 8, 7, 2, 4]\n",
-      "[5, 6, 3, 1, 8, 7, 2, 4]\n",
-      "---------------\n",
-      "[5, 6, 3, 1, 8, 7, 2, 4]\n",
-      "key is at position 2\n",
-      "[5, 6, 6, 1, 8, 7, 2, 4]\n",
-      "[5, 5, 6, 1, 8, 7, 2, 4]\n",
-      "[3, 5, 6, 1, 8, 7, 2, 4]\n",
-      "---------------\n",
-      "[3, 5, 6, 1, 8, 7, 2, 4]\n",
-      "key is at position 3\n",
-      "[3, 5, 6, 6, 8, 7, 2, 4]\n",
-      "[3, 5, 5, 6, 8, 7, 2, 4]\n",
-      "[3, 3, 5, 6, 8, 7, 2, 4]\n",
-      "[1, 3, 5, 6, 8, 7, 2, 4]\n",
-      "---------------\n",
-      "[1, 3, 5, 6, 8, 7, 2, 4]\n",
-      "key is at position 4\n",
-      "[1, 3, 5, 6, 8, 7, 2, 4]\n",
-      "---------------\n",
-      "[1, 3, 5, 6, 8, 7, 2, 4]\n",
-      "key is at position 5\n",
-      "[1, 3, 5, 6, 8, 8, 2, 4]\n",
-      "[1, 3, 5, 6, 7, 8, 2, 4]\n",
-      "---------------\n",
-      "[1, 3, 5, 6, 7, 8, 2, 4]\n",
-      "key is at position 6\n",
-      "[1, 3, 5, 6, 7, 8, 8, 4]\n",
-      "[1, 3, 5, 6, 7, 7, 8, 4]\n",
-      "[1, 3, 5, 6, 6, 7, 8, 4]\n",
-      "[1, 3, 5, 5, 6, 7, 8, 4]\n",
-      "[1, 3, 3, 5, 6, 7, 8, 4]\n",
-      "[1, 2, 3, 5, 6, 7, 8, 4]\n",
-      "---------------\n",
-      "[1, 2, 3, 5, 6, 7, 8, 4]\n",
-      "key is at position 7\n",
-      "[1, 2, 3, 5, 6, 7, 8, 8]\n",
-      "[1, 2, 3, 5, 6, 7, 7, 8]\n",
-      "[1, 2, 3, 5, 6, 6, 7, 8]\n",
-      "[1, 2, 3, 5, 5, 6, 7, 8]\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8]\n",
-      "---------------\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8]\n"
+      "[1, 2, 2, 5, 6, 7, 8, 9, 10, 13, 13, 14, 16, 20, 22, 25, 28, 29, 31, 32, 33, 34, 38, 38, 38, 39, 42, 42, 42, 43, 46, 50, 51, 57, 59, 63, 64, 64, 65, 66, 67, 68, 71, 73, 74, 74, 80, 80, 82, 83, 84, 85, 86, 88, 93, 93, 94, 96, 96, 98, 98, 99, 99, 93]\n"
      ]
     }
    ],
    "source": [
-    "#YOUR_CODE_HERE\n",
-    "arr = [6,5,3,1,8,7,2,4]\n",
-    "print(insertion_sort(arr))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[6, 5, 3, 1, 8, 7, 2, 4]\n",
-      "key is at position 1\n",
-      "[5, 6, 3, 1, 8, 7, 2, 4]\n",
-      "---------------\n",
-      "[5, 6, 3, 1, 8, 7, 2, 4]\n",
-      "key is at position 2\n",
-      "[5, 3, 6, 1, 8, 7, 2, 4]\n",
-      "[3, 5, 6, 1, 8, 7, 2, 4]\n",
-      "---------------\n",
-      "[3, 5, 6, 1, 8, 7, 2, 4]\n",
-      "key is at position 3\n",
-      "[3, 5, 1, 6, 8, 7, 2, 4]\n",
-      "[3, 1, 5, 6, 8, 7, 2, 4]\n",
-      "[1, 3, 5, 6, 8, 7, 2, 4]\n",
-      "---------------\n",
-      "[1, 3, 5, 6, 8, 7, 2, 4]\n",
-      "key is at position 4\n",
-      "---------------\n",
-      "[1, 3, 5, 6, 8, 7, 2, 4]\n",
-      "key is at position 5\n",
-      "[1, 3, 5, 6, 7, 8, 2, 4]\n",
-      "---------------\n",
-      "[1, 3, 5, 6, 7, 8, 2, 4]\n",
-      "key is at position 6\n",
-      "[1, 3, 5, 6, 7, 2, 8, 4]\n",
-      "[1, 3, 5, 6, 2, 7, 8, 4]\n",
-      "[1, 3, 5, 2, 6, 7, 8, 4]\n",
-      "[1, 3, 2, 5, 6, 7, 8, 4]\n",
-      "[1, 2, 3, 5, 6, 7, 8, 4]\n",
-      "---------------\n",
-      "[1, 2, 3, 5, 6, 7, 8, 4]\n",
-      "key is at position 7\n",
-      "[1, 2, 3, 5, 6, 7, 4, 8]\n",
-      "[1, 2, 3, 5, 6, 4, 7, 8]\n",
-      "[1, 2, 3, 5, 4, 6, 7, 8]\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8]\n",
-      "---------------\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8]\n"
-     ]
-    }
-   ],
-   "source": [
-    "arr = [6,5,3,1,8,7,2,4]\n",
-    "print(insertion_sort_ori(arr))"
+    "print(insertionSort([39, 96, 51, 20, 42, 42, 74, 28, 66, 16, 10, 86, 6, 43, 67, 98, 32, 73, 99, 7, 80, 88, 57, 83, 1, 64, 33, 38, 38, 8, 68, 38, 42, 80, 71, 82, 25, 29, 2, 85, 2, 96, 34, 14, 9, 65, 50, 63, 99, 94, 5, 93, 84, 46, 64, 22, 59, 31, 74, 13, 93, 13, 98, 93]))"
    ]
   },
   {
@@ -650,18 +697,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n"
+     ]
     }
    ],
    "source": [
@@ -669,21 +713,16 @@
     "def BubbleSort(a):\n",
     "    for i in range(0,len(a)-1):\n",
     "        swap = False\n",
-    "        \n",
     "        for j in range(0,len(a)-i-1):\n",
-    "            \n",
     "            if a[j] > a[j+1]:\n",
-    "                temp = a[j]\n",
-    "                a[j] = a[j+1]\n",
-    "                a[j+1] = temp\n",
+    "                a[j], a[j+1] = a[j+1], a[j]\n",
     "                swap = True\n",
-    "\n",
     "        if swap == False:\n",
     "            break\n",
     "\n",
     "    return a    \n",
     "\n",
-    "BubbleSort(a)"
+    "print(BubbleSort(a))"
    ]
   },
   {
@@ -739,10 +778,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "PROCEDURE QuickSort(Arr : ARRAY OF INTEGERS):\n",
     "    IF Arr.Size = 0:\n",
@@ -887,6 +929,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "def recQuickSort(l):\n",
+    "\tif l == []:\n",
+    "\t\treturn []\n",
+    "\tpivot = l[random.randint(0, len(l) - 1)]\n",
+    "\tequal = [i for i in l if i == pivot]\n",
+    "\tlower = [i for i in l if i < pivot]\n",
+    "\thigher = [i for i in l if i > pivot]\n",
+    "\n",
+    "\treturn recQuickSort(lower)+equal+recQuickSort(higher)\n",
+    "\n",
+    "recQuickSort([6,5,3,1,8,7,2,4])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -951,6 +1024,61 @@
     "    ENDIF\n",
     "END PROCEDURE"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [1, 2, 3, 4, 6, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def quicksort(arr, low, high):\n",
+    "    if low < high:\n",
+    "        # Partition the array and get the pivot index\n",
+    "        pivot_index = partition(arr, low, high)\n",
+    "        \n",
+    "        # Recursively sort the sub-arrays on both sides of the pivot\n",
+    "        quicksort(arr, low, pivot_index - 1)\n",
+    "        quicksort(arr, pivot_index + 1, high)\n",
+    "\n",
+    "def partition(arr, low, high):\n",
+    "    # Choose the rightmost element as the pivot\n",
+    "    pivot = arr[high]\n",
+    "    # Initialize the pivot index to the leftmost element\n",
+    "    pivot_index = low\n",
+    "    \n",
+    "    # Iterate through the array and move elements smaller than the pivot to the left\n",
+    "    for i in range(low, high):\n",
+    "        if arr[i] < pivot:\n",
+    "            # Swap arr[i] and arr[pivot_index]\n",
+    "            arr[i], arr[pivot_index] = arr[pivot_index], arr[i]\n",
+    "            pivot_index += 1\n",
+    "    \n",
+    "    # Swap the pivot element with the element at the pivot_index\n",
+    "    arr[pivot_index], arr[high] = arr[high], arr[pivot_index]\n",
+    "    \n",
+    "    # Return the final pivot index\n",
+    "    return pivot_index\n",
+    "\n",
+    "# Example usage:\n",
+    "my_array = [4, 6, 2, 7, 1, 9, 3]\n",
+    "quicksort(my_array, 0, len(my_array) - 1)\n",
+    "print(\"Sorted array:\", my_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1074,6 +1202,143 @@
    "source": [
     "#YOUR_CODE_HERE"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# insertion sort\n",
+    "array = [14, 5, 27, 2, 19, 12, 30, 8, 6, 25, 1, 17, 11, 22, 7, 4, 28, 9, 23, 13, 3, 16, 26, 20, 29, 10, 18, 15, 21, 24]\n",
+    "\n",
+    "def insertionSort(l):\n",
+    "    for i in range(len(l)):\n",
+    "        o = i\n",
+    "        while o != 0 and l[o-1] > l[o]:\n",
+    "            l[o-1], l[o] = l[o], l[o-1]\n",
+    "            o -= 1\n",
+    "    return l\n",
+    "\n",
+    "print(insertionSort(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# bubble sort\n",
+    "array = [14, 5, 27, 2, 19, 12, 30, 8, 6, 25, 1, 17, 11, 22, 7, 4, 28, 9, 23, 13, 3, 16, 26, 20, 29, 10, 18, 15, 21, 24]\n",
+    "\n",
+    "def bubbleSort(l):\n",
+    "    for i in range(len(l)):\n",
+    "        for o in range(len(l) - i):\n",
+    "            if l[i] > l[o + i]:\n",
+    "                l[o + i], l[i] = l[i], l[o + i]\n",
+    "                \n",
+    "    return l\n",
+    "\n",
+    "print(bubbleSort(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# quicksort\n",
+    "array = [14, 5, 27, 2, 19, 12, 30, 8, 6, 25, 1, 17, 11, 22, 7, 4, 28, 9, 23, 13, 3, 16, 26, 20, 29, 10, 18, 15, 21, 24]\n",
+    "\n",
+    "def quickSort(l):\n",
+    "    if l == []:\n",
+    "        return []\n",
+    "    \n",
+    "    pivot = l[len(l) - 1]\n",
+    "    smaller = [i for i in l if i < pivot]\n",
+    "    equal = [i for i in l if i == pivot]\n",
+    "    larger = [i for i in l if i > pivot]\n",
+    "    \n",
+    "    return quickSort(smaller) + equal + quickSort(larger)\n",
+    "\n",
+    "print(quickSort(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mergesort\n",
+    "array = [14, 5, 27, 2, 19, 12, 30, 8, 6, 25, 1, 17, 11, 22, 7, 4, 28, 9, 23, 13, 3, 16, 26, 20, 29, 10, 18, 15, 21, 24]\n",
+    "\n",
+    "def mergesort(l):\n",
+    "    if len(l) == 1:\n",
+    "        return l\n",
+    "    \n",
+    "    midpt = len(l) // 2\n",
+    "    leftArray = l[:midpt]\n",
+    "    rightArray = l[midpt:]\n",
+    "    \n",
+    "    array1 = mergesort(leftArray)\n",
+    "    array2 = mergesort(rightArray)\n",
+    "    \n",
+    "    return merge(array1, array2)\n",
+    "    \n",
+    "def merge(leftArray, rightArray):\n",
+    "    ret = []\n",
+    "    while True:\n",
+    "        if leftArray == []:\n",
+    "            ret += rightArray\n",
+    "            return ret\n",
+    "        elif rightArray == []:\n",
+    "            ret += leftArray\n",
+    "            return ret\n",
+    "        \n",
+    "        if leftArray[0] < rightArray[0]:\n",
+    "            ret.append(leftArray[0])\n",
+    "            leftArray.pop(0)\n",
+    "        else:\n",
+    "            ret.append(rightArray[0])\n",
+    "            rightArray.pop(0)\n",
+    "            \n",
+    "print(mergesort(array))"
+   ]
   }
  ],
  "metadata": {
@@ -1094,7 +1359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.16"
   },
   "orig_nbformat": 2
  },
