--- a/Notes/Chapter_09_Object_Oriented_Programming.ipynb
+++ b/Notes/Chapter_09_Object_Oriented_Programming.ipynb
@@ -1950,10 +1950,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [2, 17, 6, 22, 13, 29, 11, 8, 15, 1, 19, 26, 14, 5, 27, 20, 4, 9, 25, 10, 28, 23, 16, 7, 18, 24, 30, 3, 21, 12]\n",
+    "\n",
+    "def linear(find, array):\n",
+    "    for i in range(len(array)):\n",
+    "        if array[i] == find:\n",
+    "            return i\n",
+    "        \n",
+    "print(linear(7, array))\n",
+    "\n",
+    "array = list(sorted(array))\n",
+    "\n",
+    "def binary(find, array, lower, upper):\n",
+    "\n",
+    "    midpt = lower + upper // 2\n",
+    "    \n",
+    "    if upper < lower:\n",
+    "        return -1\n",
+    "\n",
+    "    if find == array[midpt]:        \n",
+    "        return midpt\n",
+    "    elif find > array[midpt]:\n",
+    "        return binary(find, array, midpt, upper)\n",
+    "    else:\n",
+    "        return binary(find, array, lower, midpt)\n",
+    "    \n",
+    "print(binary(7, array, 0, len(array) - 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [2, 17, 6, 22, 13, 29, 11, 8, 15, 1, 19, 26, 14, 5, 27, 20, 4, 9, 25, 10, 28, 23, 16, 7, 18, 24, 30, 3, 21, 12]\n",
+    "\n",
+    "def insertion(array):\n",
+    "    for i in range(len(array)):\n",
+    "        j = i\n",
+    "        while j > 0:\n",
+    "            if array[j] < array[j-1]:\n",
+    "                array[j], array[j-1] = array[j-1], array[j]\n",
+    "            j -= 1\n",
+    "    return array\n",
+    "\n",
+    "print(insertion(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [2, 17, 6, 22, 13, 29, 11, 8, 15, 1, 19, 26, 14, 5, 27, 20, 4, 9, 25, 10, 28, 23, 16, 7, 18, 24, 30, 3, 21, 12]\n",
+    "\n",
+    "def bubble(array):\n",
+    "    for i in range(len(array)):\n",
+    "        for j in range(len(array) - i):\n",
+    "            if array[i] > array[j + i]:\n",
+    "                array[i], array[j + i] = array[j + i], array[i]\n",
+    "    return array\n",
+    "\n",
+    "print(bubble(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [2, 17, 6, 22, 13, 29, 11, 8, 15, 1, 19, 26, 14, 5, 27, 20, 4, 9, 25, 10, 28, 23, 16, 7, 18, 24, 30, 3, 21, 12]\n",
+    "\n",
+    "def quicksort(array):\n",
+    "    if array == []:\n",
+    "        return []\n",
+    "    \n",
+    "    pivot = array[len(array)-1]\n",
+    "    smaller = [i for i in array if i < pivot]\n",
+    "    equal = [i for i in array if i == pivot]\n",
+    "    greater = [i for i in array if i > pivot]\n",
+    "    \n",
+    "    return quicksort(smaller) + equal + quicksort(greater)\n",
+    "\n",
+    "print(quicksort(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [2, 17, 6, 22, 13, 29, 11, 8, 15, 1, 19, 26, 14, 5, 27, 20, 4, 9, 25, 10, 28, 23, 16, 7, 18, 24, 30, 3, 21, 12]\n",
+    "\n",
+    "def mergesort(array):\n",
+    "    \n",
+    "    if len(array) == 1:\n",
+    "        return array\n",
+    "    \n",
+    "    midpt = len(array) // 2\n",
+    "    left = array[:midpt]\n",
+    "    right = array[midpt:]\n",
+    "    \n",
+    "    left = mergesort(left)\n",
+    "    right = mergesort(right)   \n",
+    "     \n",
+    "    return merge(left, right)\n",
+    "\n",
+    "def merge(left, right):\n",
+    "    ret = []\n",
+    "    while True:\n",
+    "        if left == []:\n",
+    "            ret += right\n",
+    "            return ret\n",
+    "        elif right == []:\n",
+    "            ret += left \n",
+    "            return ret\n",
+    "        elif left[0] < right[0]:\n",
+    "            ret.append(left[0])\n",
+    "            left.pop(0)\n",
+    "        else:\n",
+    "            ret.append(right[0])\n",
+    "            right.pop(0)\n",
+    "        \n",
+    "print(mergesort(array))"
+   ]
   }
  ],
  "metadata": {
@@ -1972,7 +2141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.16"
   },
   "orig_nbformat": 2,
   "vscode": {
