--- a/Notes/Chapter_13_Data_And_Information.ipynb
+++ b/Notes/Chapter_13_Data_And_Information.ipynb
@@ -61,11 +61,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "130"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#YOUR_ANSWER_HERE"
+    "def den_to_bin(num):\n",
+    "    output = \"\"\n",
+    "    while num != 0:\n",
+    "        output = str(num % 2) + output\n",
+    "        num //= 2\n",
+    "    return output\n",
+    "\n",
+    "def den_to_bin_rec(num):\n",
+    "    return den_to_bin(num // 2) + str(num % 2)\n",
+    "\n",
+    "def bin_to_den(num):\n",
+    "    output = 0\n",
+    "    for i in range(len(str(num))):\n",
+    "        output += int(str(num)[-1 - i]) * (2 ** i)\n",
+    "    return output\n",
+    "\n",
+    "def bin_to_den_rec(num):\n",
+    "    if num == 0:\n",
+    "        return 0\n",
+    "    return bin_to_den_rec(int(str(num)[1:])) + int(str(num)[0]) * (2 ** (len(str(num)) - 1))"
    ]
   },
   {
